[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spacetrack-mcp"
version = "0.1.0"
description = "MCP server for Space-Track.org satellite catalog and orbital data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "spacetrack-mcp contributors" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "space-track",
    "satellite",
    "orbital-mechanics",
    "tle",
    "sgp4",
    "astronomy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0",
    "requests>=2.31.0",
    "sgp4>=2.22",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.1",
]

[project.scripts]
spacetrack-mcp = "spacetrack_mcp.server:main"

[project.urls]
Homepage = "https://github.com/your-org/spacetrack-mcp"
Repository = "https://github.com/your-org/spacetrack-mcp"
"Bug Tracker" = "https://github.com/your-org/spacetrack-mcp/issues"
Documentation = "https://github.com/your-org/spacetrack-mcp#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/spacetrack_mcp"]
